# crypto-market-trader

./: .env.example  README.md  allprices.json  openapi.yaml  pyproject.toml
scripts/: openapi.py  server
src/crypto_market_trader/: __init__.py  config.py  main.py
src/crypto_market_trader/controller/: trade_orders.py
src/crypto_market_trader/models/: base_model.py
src/crypto_market_trader/repositories/: binance_exchange.py
src/crypto_market_trader/routes/: trade_orders.py
src/crypto_market_trader/services/: currency_services.py  util.py
