[tool.poetry]
name = "crypto_market_trader"
version = "0.1.0"
description = ""
authors = ["Tin Aye Yee <tinayeyee6308@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
asyncio = "^3.4.3"
requests = "^2.31.0"
python-binance = "^1.0.19"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
structlog = "^23.1.0"
starlette-context = "^0.3.6"
httpx = "^0.24.1"
pymongo = "^4.4.1"
pydantic = "^2.2.1"
motor = "^3.2.0"
pydantic-settings = "^2.0.3"
pre-commit = "^3.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
autopep8 = "^2.0.2"
black = "^23.7.0"
isort = "^5.12.0"
devtools = {extras = ["pygments"], version = "^0.8.0"}
mongomock = "^4.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
